# flappy-bird-wasm

./: .gitignore  AGENTS.md  Cargo.toml  README.md  download_assets.sh  flappy_bird_wasm.d  flappy_bird_wasm.d.ts  flappy_bird_wasm.js  flappy_bird_wasm_bg.wasm  flappy_bird_wasm_bg.wasm.d.ts  index.html  package.json
.fingerprint/byteorder-e736dbe14cb2eae8/: lib-byteorder  lib-byteorder.json
.fingerprint/cfg-if-117769f2e859c3e2/: lib-cfg_if  lib-cfg_if.json
.fingerprint/flappy-bird-wasm-6d8ef6344e055033/: lib-flappy_bird_wasm  lib-flappy_bird_wasm.json  output-lib-flappy_bird_wasm
.fingerprint/getrandom-00c5e153fb5ff210/: lib-getrandom  lib-getrandom.json
.fingerprint/js-sys-af24f91ae1c7f5af/: lib-js_sys  lib-js_sys.json
.fingerprint/once_cell-d67033960f05fa5a/: lib-once_cell  lib-once_cell.json
.fingerprint/ppv-lite86-be1da6b9e95a2305/: lib-ppv_lite86  lib-ppv_lite86.json
.fingerprint/rand-1dfb2881350d2955/: lib-rand  lib-rand.json
.fingerprint/rand_chacha-b1b07130a6d1084e/: lib-rand_chacha  lib-rand_chacha.json
.fingerprint/rand_core-b0b1ab08b9499ac4/: lib-rand_core  lib-rand_core.json
.fingerprint/wasm-bindgen-5fce5697b092805a/: lib-wasm_bindgen  lib-wasm_bindgen.json
.fingerprint/wasm-bindgen-b2c1cb10349e7486/: run-build-script-build-script-build  run-build-script-build-script-build.json
.fingerprint/wasm-bindgen-futures-f0b4f07dbfac3521/: lib-wasm_bindgen_futures  lib-wasm_bindgen_futures.json
.fingerprint/web-sys-552a2d4d51f21e2f/: lib-web_sys  lib-web_sys.json
scripts/: download_assets.sh
src/: lib.rs
tests/: game_logic.rs
(+4 files in other folders)
