[package]
name = "flappy-bird-wasm"
version = "0.1.0"
edition = "2021"
description = "A Flappy Bird clone implemented in Rust and WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
    "Performance",
    "KeyboardEvent",
    "HtmlImageElement",
    "ImageData",
]}
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window"
] }
